
5.0 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Add `WAGTAILIMAGES_EXTENSIONS` setting to restrict image uploads to specific file types (Aman Pandey, Ananjan-R)
 * Update user list column level to `Access level` to be easier to understand (Vallabh Tiwari)
 * Migrate `.button-longrunning` behaviour to a Stimulus controller with support for custom label element & duration (Loveth Omokaro)
 * Fix: Ensure `label_format` on StructBlock gracefully handles missing variables (Aadi jindal)
 * Fix: Adopt a no-JavaScript and more accessible solution for the 'Reset to default' switch to Gravatar when editing user profile (Loveth Omokaro)
 * Fix: Ensure `Site.get_site_root_paths` works on cache backends that do not preserve Python objects (Jaap Roes)
 * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
 * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp)
 * Maintenance: Removed features deprecated in Wagtail 3.0 and 4.0 (Matt Westcott)
 * Maintenance: Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
 * Maintenance: Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
 * Maintenance: Refactor accessibility checker userbar item (Albina Starykova)
 * Maintenance: Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
 * Maintenance: Provisional Django 5.0 compatibility fixes (Sage Abdullah)


4.2 (06.02.2023)
~~~~~~~~~~~~~~~~

 * Added StreamField data migration helpers (Sandil Ranasinghe, Jacob Topp-Mugglestone, Joshua Munn, Karl Hobley)
 * Added ability to lock snippet models with `LockableMixin` (Sage Abdullah)
 * Added ability to submit snippets for moderation with `WorkflowMixin` (Sage Abdullah)
 * Create `{% fullpageurl %}` tag for getting the absolute URL of a page (Jake Howard)
 * Added `MultipleChooserPanel`, a variant of `InlinePanel` with improved editor experience when inserting multiple linked objects (Matt Westcott)