@@ -18,6 +18,7 @@ depth: 1
  * Add `WAGTAILIMAGES_EXTENSIONS` setting to restrict image uploads to specific file types (Aman Pandey, Ananjan-R)
  * Update user list column level to `Access level` to be easier to understand (Vallabh Tiwari)
  * Migrate `.button-longrunning` behaviour to a Stimulus controller with support for custom label element & duration (Loveth Omokaro)
+ * Implement new simplified userbar designs (Albinas Starykova)
 
 ### Bug fixes
 
