@@ -10,6 +10,7 @@
             <svg class="w-hidden">
                 <defs>
                     {% include "wagtailadmin/icons/wagtail.svg" %}
+                    {% include "wagtailadmin/icons/key.svg" %}
                     {% include "wagtailadmin/icons/folder-open-inverse.svg" %}
                     {% include "wagtailadmin/icons/edit.svg" %}
                     {% include "wagtailadmin/icons/plus.svg" %}
