@@ -3,7 +3,7 @@
 
 {% block item_content %}
     <a href="{% url 'wagtailadmin_home' %}" target="_parent" role="menuitem">
-        {% icon name="wagtail-icon" classname="w-action-icon" %}
+        {% icon name="key" classname="w-action-icon" %}
         {% trans 'Go to Wagtail admin' %}
     </a>
 {% endblock %}
